# deform-planning

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  sol_kinova_rope_alm_cons_mode0.csv  sol_kinova_rope_alm_meta.json  sol_kinova_rope_alm_mode0.csv  sol_kinova_rope_alm_resets.csv
diffadmm_cpp/: CMakeLists.txt  diffadmm_pybind.cpp  diffadmm_wrapper.cpp  diffadmm_wrapper.h
diffadmm_cpp/.cache/clangd/index/: diffadmm_pybind.cpp.DA2BF5D2E5A57FB0.idx  diffadmm_wrapper.cpp.B2EBA8E81541EB13.idx  diffadmm_wrapper.h.CDFCCFA09CA8BCC7.idx
include/: common.hpp  continuous_system.hpp  pm_admm.hpp  rope_admm.hpp  rope_model.hpp  rope_residual.hpp
include/coupling/: rope_model.hpp
include/solvers/: rope_residual.hpp
scripts/: build.sh  build_diffadmm.sh
src/: diffadmm_test.py  plotting.py  residual_arm_test.py  sim_test.py
src/cpp/: dummy.cpp  pm_admm.cpp  rope_admm_opt.cpp  rope_model.cpp  rope_residual_opt.cpp
src/data/config/: rope_leap_config.yaml
src/data/problems/: 2arm1rope_hard.yaml  2arm1rope_match.yaml  2arm1rope_v1.yaml
src/data/rope/: arm_rope_1pin.yaml  arm_rope_2pin.yaml  arm_rope_hard.yaml  test_rope.yaml
src/data/urdf/: kinova3_1arm.urdf  kinova3_2arm.urdf  kinova3_2arm_far.urdf
src/diffadmm/: CMakeLists.txt  diffadmm_pybind.cpp  diffadmm_test.py  diffadmm_wrapper.cpp  diffadmm_wrapper.h  diffadmm_wrapper.py
src/diffadmm/.cache/clangd/index/: diffadmm_pybind.cpp.0AFC0DFC535275F0.idx  diffadmm_wrapper.h.4F9EDE74F7C22A4A.idx
src/py/: gen_hard_case.py  gen_rope_targets.py  leapviz.py  matchviz.py  plotting.py  residual_arm_test.py  ropeviz.py  sim_test.py
src/py/diffadmm/: diffadmm_test.py  diffadmm_wrapper.py
